syntax = "proto3";

package analytics;

import "google/protobuf/empty.proto"; 

option go_package = "go-instagram-clone/services/analytics/proto";

message LoginRequest {
  string email = 1;
  string phone = 2;
} 

message NewUserRequest {
  string email = 1;
  string phone = 2;
}

message QuantityResponse {
  int32 quantity = 1;
}

service AnalyticsService {
  rpc RecordLogin(LoginRequest) returns (google.protobuf.Empty);
  rpc RecordNewUser(NewUserRequest) returns (google.protobuf.Empty);
  rpc GetQuantityLogins(google.protobuf.Empty) returns (QuantityResponse);
  rpc GetQuantityRegister(google.protobuf.Empty) returns (QuantityResponse);
}